[metadata]
name = compilio-cli
author = Victor Le & Quentin de Longraye
author-email = https://github.com/Compilio/compilio-cli
summary = CLI tool to interact with Compilio API
license = GPL
description-file =
    README.md
home-page = http://pypi.python.org/pypi/compilio-cli
requires-python = >=2.7
classifier =
    Development Status :: 1 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    foobar