[metadata]
name = compilio-cli
author = Quentin de Longraye
author-email = quentin@dldl.fr
summary = CLI tool to interact with Compilio API
license = GPL
description-file = README.md
home-page = http://pypi.python.org/pypi/compilio-cli
requires-python = >=2.7
classifier =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python

[files]
packages =
    compilio
